# risc0-mixer

./: .env.anvil  Cargo.toml  README.md  justfile
apps/: README.md
contracts/: Elf.sol
methods/: build.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
