[workspace]
resolver = "2"
members = ["apps", "methods", "core"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-primitives = { version = "1.0", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "1.0" }
alloy-merkle-tree = { git = "https://github.com/willemolding/alloy-merkle-tree", rev = "a62adb8" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "2.3", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }
risc0-zkvm = { version = "2.3", default-features = false }
risc0-zkp = { version = "2.0.2", default-features = false }
serde = { version = "1.0", features = ["derive", "std"] }
url = { version = "2.5" }
mvm-core = { path = "./core" }
sha2 = "0.10.8"
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand"] }

[profile.release]
debug = 1
lto = true
