[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "can-spend"
path = "src/bin/can_spend.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "1.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-merkle-tree = { git = "https://github.com/willemolding/alloy-merkle-tree", rev = "a62adb8" }
alloy-sol-types = { version = "1.2" }
risc0-zkvm = { version = "2.3.0", default-features = false, features = ['std'] }
mvm-core = { path = "../../core" }
sha2 = "0.10.6"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }

[profile.release]
lto = "thin"
